--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,11 @@ figure {
   font-size: 2rem;
 }
 
+figcaption {
+  max-width: 20rem;
+  height: 5rem;
+}
+
 article {
   font-family:'bodyfont';
   font-size: 1.7rem;
